# django-uppy

./: AGENTS.md  Dockerfile  README_UPPY.md  README_UPPY_WIDGET.md  db.sqlite3  docker-compose.yml  pyproject.toml
demo/: settings.py  storages.py  urls.py
demo/uploads/: admin.py  forms.py  models.py
demo/uploads/migrations/: 0001_initial.py
django_uppy/: fields.py  settings.py  urls.py  utils.py  widgets.py
django_uppy/static/django-uppy/: django-uppy-widget.js
django_uppy/templates/uppy/: widget.html
django_uppy/tests/: test_uppy_views.py
django_uppy/views/: companion.py  s3.py  tus.py
examples/: upload_template.html  uppy_forms.py  uppy_views.py
